@@ -1,5 +1,11 @@
 2007-05-20  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
+	PR fortran/31618
+	Backport from trunk.
+	* gfortran.dg/backspace_8.f:  New test case.
+
+2007-05-20  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
 	PR libfortran/31196
 	Backport from trunk.
 	* gfortran.dg/reshape_transpose_1.f90:  New test.
